:tv: fix overflow in roster

--- a/ui/src/app/pages/roster/roster.scss
+++ b/ui/src/app/pages/roster/roster.scss
@@ -80,6 +80,8 @@ nz-select {
         display: flex;
         justify-content: flex-start;
         align-items: center;
+        overflow: hidden;
+        white-space: nowrap;
     }
 
     li > span {
